apollo-router/src/plugins/response_cache/storage/snapshots/apollo_router__plugins__response_cache__storage__redis__tests__invalidation_key_permutations@input____None____.snap
---
source: apollo-router/src/plugins/response_cache/storage/redis.rs
expression: cache_tags
---
[
    "cache-tag:subgraph-products",
]
